--- a/app/src/main/res/layout/fragment_flagment_inbox.xml
+++ b/app/src/main/res/layout/fragment_flagment_inbox.xml
@@ -29,7 +29,9 @@
         app:tint="@color/white"
         app:backgroundTint="@color/teal_200"
         app:rippleColor="@color/red"
-        app:fabSize="normal">
+        app:fabSize="normal"
+
+        >
 
 
 
