--- a/app/src/main/res/layout/fragment_sent_mails.xml
+++ b/app/src/main/res/layout/fragment_sent_mails.xml
@@ -7,8 +7,15 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inbox" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Sent mails" />
+        android:id="@+id/recycleView2"
+        android:background="@color/black"
+        />
 
 </FrameLayout>
